アニメーションを追加

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -70,7 +70,7 @@ popup.lookup = {
         $(self.selector.context).bind("keyup", self.onKeyup).focus();
 
         $("input, select").bind("change", function() {
-            self.saveFormData();
+            popup.cache.saveFormData();
         });
 
         this.showHistories();
