検索結果のスタイルを修正

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -84,7 +84,7 @@
         </td>
     </tr>
     <tr>
-        <th class="option_th">透過度<br>
+        <th class="option_th">不透過度<br>
             <span class="default_value">(デフォルト:80)</span>
         </th>
         <td class="option_td">
