HTMLの国際化を修正

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>MultiLookup - ブラウザアクション</title>
+<title>MultiLookup</title>
 <script src="../js/lib/jquery-1.4.2.min.js"></script>
 <script src="../js/lib/jquery-ui-1.8.5.min.js"></script>
 <script src="../js/utils.js"></script>
@@ -36,7 +36,7 @@ popup.lookup = {
     init: function() {
         var self = this;
         this.siteinfo = multilookup.siteinfo.getSiteinfo();
-        this.entries = multilookup.config.getConfigByName("entries");
+        this.entries = multilookup.config.get("entries", []);
         keybinds.init();
         $.each(this.entries, function(i, id) {
             var v = self.siteinfo[id];
@@ -305,7 +305,7 @@ popup.option = {
                 var name = this.name;
                 var value = $(this).val();
                 if ((value == "0") || (value == "1")) {
-                    value = (value == "1") ? true : false;
+                    value = (value == "1")
                 }
                 self.config[name] = value;
                 self.save();
@@ -351,10 +351,11 @@ $(document).ready(function() {
     var tabname = cache["active_tab_name"] || "lookup";
     popup.changeTab(tabname);
 
-    $(".i18n").each(function() {
-        var message = _(this.title);
+    $("[data-i18n]").each(function() {
+        var message = _(this.dataset["i18n"]);
         var lang = window.navigator.language;
         var type = this.type;
+        if (!message) { return; }
         if ((this.tagName === "INPUT") && (type === "button" || type === "reset" || type === "submit")) {
             $(this).val(message).attr("lang", lang).removeAttr("title");
         } else {
@@ -367,41 +368,41 @@ $(document).ready(function() {
 </head>
 <body>
 <h1>
-    <span id="extension-title" class="i18n" title="ext_name">MultiLookup</span>
-    <span class="content-title content-title-active i18n" id="lookup-title" title="quick_lookup">クイック検索</span>
-    <span class="content-title i18n" id="option-title" title="option">オプション</span>
+    <span id="extension-title" data-i18n="ext_name">MultiLookup</span>
+    <span class="content-title content-title-active" id="lookup-title" data-i18n="quick_lookup">クイック検索</span>
+    <span class="content-title" id="option-title" data-i18n="option">オプション</span>
 </h1>
 <form class="content" id="lookup" onsubmit="return false;">
     <div id="lookup-option">
-        <label for="lookup-lang" class="i18n" title="language">言語</label>
+        <label for="lookup-lang" data-i18n="language">言語</label>
         <select id="lookup-lang" name="lang">
             <option value="">--</option>
         </select>
-        <label for="lookup-type" class="i18n" title="type">種別</label>
+        <label for="lookup-type" data-i18n="type">種別</label>
         <select id="lookup-type" name="lookup-type">
             <option value="">--</option>
         </select>
-        <label for="lookup-site" class="i18n" title="site">サイト</label>
+        <label for="lookup-site" data-i18n="site">サイト</label>
         <select id="lookup-site" name="lookup-site">
             <option value="">--</option>
         </select>
     </div>
     <input id="lookup-context" type="search" name="search" placeholder="input search text" />
-    <input type="submit" class="i18n" title="button_lookup" value="検索" />
-    <input type="reset" class="i18n" title="button_reset" value="リセット" />
+    <input type="submit" data-i18n="button_lookup" value="検索" />
+    <input type="reset" data-i18n="button_reset" value="リセット" />
     <div id="lookup-suboption">
         <input id="enable-suggest" type="checkbox" checked />
-        <label for="enable-suggest" class="i18n" title="popup_enable_suggest">サジェストを有効にする</label>
+        <label for="enable-suggest" data-i18n="popup_enable_suggest">サジェストを有効にする</label>
     </div>
     <div id="history" style="display: none">
-        <h2 class="history-title i18n" title="option_lookup_history">履歴</h2>
+        <h2 class="history-title" data-i18n="option_lookup_history">履歴</h2>
         <div id="history-list"></div>
     </div>
 </form>
 <form class="content hide" id="option" onsubmit="return false;">
     <table>
         <tr>
-            <th><label for="result_position" class="i18n" title="option_results_position">表示位置</label></th>
+            <th><label for="result_position" data-i18n="option_results_position">表示位置</label></th>
             <td>
                 <select id="result_position" class="option" name="result_position">
                     <option value="buttom">buttom</option>
@@ -412,44 +413,44 @@ $(document).ready(function() {
             </td>
         </tr>
         <tr>
-            <th class="i18n" title="option_contextmenu">コンテキストメニュー</th>
+            <th data-i18n="option_contextmenu">コンテキストメニュー</th>
             <td>
                 <input type="radio" id="enable_context_menus" value="1" name="enable_context_menus" checked>
-                <label for="enable_context_menus" class="i18n" title="enable">有効にする</label>
+                <label for="enable_context_menus" data-i18n="enable">有効にする</label>
                 <input type="radio" id="disable_context_menus" value="0" name="enable_context_menus">
-                <label for="disable_context_menus" class="i18n" title="disable">無効にする</label>
+                <label for="disable_context_menus" data-i18n="disable">無効にする</label>
             </td>
         </tr>
         <tr>
-            <th class="i18n" title="option_middle_click_lookup">ミドルクリック検索</th>
+            <th data-i18n="option_middle_click_lookup">ミドルクリック検索</th>
             <td>
                 <input type="radio" id="enable_middle_click_lookup" value="1" name="enable_middle_click_lookup" checked>
-                <label for="enable_middle_click_lookup" class="i18n" title="enable">有効にする</label>
+                <label for="enable_middle_click_lookup" data-i18n="enable">有効にする</label>
                 <input type="radio" id="disable_middle_click_lookup" value="0" name="enable_middle_click_lookup">
-                <label for="disable_middle_click_lookup" class="i18n" title="disable">無効にする</label>
+                <label for="disable_middle_click_lookup" data-i18n="disable">無効にする</label>
             </td>
         </tr>
         <tr>
-            <th class="i18n" title="option_dblclick_lookup">ダブルクリック検索</th>
+            <th data-i18n="option_dblclick_lookup">ダブルクリック検索</th>
             <td>
                 <input type="radio" id="enable_dblclick_lookup" value="1" name="enable_dblclick_lookup">
-                <label for="enable_dblclick_lookup" class="i18n" title="enable">有効にする</label>
+                <label for="enable_dblclick_lookup" data-i18n="enable">有効にする</label>
                 <input type="radio" id="disable_dblclick_lookup" value="0" name="enable_dblclick_lookup" checked>
-                <label for="disable_dblclick_lookup" class="i18n" title="disable">無効にする</label>
+                <label for="disable_dblclick_lookup" data-i18n="disable">無効にする</label>
             </td>
         </tr>
         <tr>
-            <th class="i18n" title="option_modifier_key">修飾キー</th>
+            <th data-i18n="option_modifier_key">修飾キー</th>
             <td>
                 <input type="radio" id="enable_modifier_key" value="1" name="enable_modifier_key" checked>
-                <label for="enable_modifier_key" class="i18n" title="enable">有効にする</label>
+                <label for="enable_modifier_key" data-i18n="enable">有効にする</label>
                 <input type="radio" id="disable_modifier_key" value="0" name="enable_modifier_key">
-                <label for="disable_modifier_key" class="i18n" title="option_disable_modifier_key">修飾キーなし</label>
+                <label for="disable_modifier_key" data-i18n="option_disable_modifier_key">修飾キーなし</label>
             </td>
         </tr>
         <tr>
-            <th class="i18n" title="option_page">オプションページ</th>
-            <td><a id="open_option_page" class="i18n" title="option_page_open" href="#">オプションページを開く</a></td>
+            <th data-i18n="option_page">オプションページ</th>
+            <td><a id="open_option_page" data-i18n="option_page_open" href="#">オプションページを開く</a></td>
         </tr>
     </table>
 </form>
